* Adding Gradle resources and Readme file

--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ group 'com.gguner'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'application'
+mainClassName = "com.gguner.intercom.Main"
 
 sourceCompatibility = 1.8
 
